# VecEdit

./: .cursorrules  .gitignore  6.20claude聊天记录.md  6.20gemini对话记录.md  6.25.2claude.md  6.30-3.md  6.30-4.md  6.30.二进制行长度固定导致的问题.md  6.30_3.md  7.18对话记录.md  AI_REFACTORING_PLAN_V3.md  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ARCHITECTURE_REFACTORING_PLAN.md  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  ModelView_Migration_Guide.md  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  REFACTORING_PLAN_FOR_CLAUDE.md  Refactoring_To_ModelView_Guide.md  Stealth_Takeover_Plan.md  UI_REFACTOR_BRIEFING.md  VecEdit.sln  VecEdit.vcxproj  VecEdit.vcxproj.filters  VecEdit_Refactor_Plan.md  VecEdit_Refactoring_Summary.md  VecEdit填充向量功能优化说明.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  claude3.5 V5重构.md  claude6.19.md  claude新建项目流程对话.md  (+69 more)
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeploySupport.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake  QtDeployTargets.cmake
Example/: 123.db  test3.db
Log_md/: log.md  删除向量表Bug修复记录.md  管脚数据损坏.md
VecEdit_autogen/: deps  moc_predefs.h  mocs_compilation.cpp  mocs_compilation_Debug.cpp
app/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.bak  mainwindow_actions_utils.cpp  mainwindow_actions_utils_1.cpp  mainwindow_column_properties_view.cpp  mainwindow_data_operations.cpp  mainwindow_data_operations_1.cpp  mainwindow_datafix_helpers.cpp  mainwindow_datafix_helpers_1.cpp  mainwindow_dialogs.cpp  mainwindow_dialogs_events.cpp  mainwindow_events_sidebar.cpp  mainwindow_events_views.cpp  mainwindow_export.cpp  mainwindow_infinite_scroll.cpp  mainwindow_pins.cpp  mainwindow_pins_timeset.cpp  mainwindow_project_tables.cpp  mainwindow_project_tables_1.cpp  mainwindow_setup.cpp  mainwindow_setup_1.cpp  mainwindow_setup_2.cpp  mainwindow_test.cpp  mainwindow_timeset_ops.cpp  mainwindow_timeset_ops_1.cpp  mainwindow_timeset_ops_2.cpp  mainwindow_vector_fill.cpp  mainwindow_waveform_timeset.cpp  mainwindow_waveform_types.cpp  mainwindow_waveform_view.cpp  mainwindow_waveform_view_1.cpp  mainwindow_waveform_view_2.cpp  mainwindow_waveform_view_3.cpp  pch.h  puppetmastertablewidget.cpp  puppetmastertablewidget.h  robustvectordatahandler.cpp  vectortablemodel.cpp  (+2 more)
build_test/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  VecEdit.sln  VecEdit.vcxproj  VecEdit.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  version.h  version.rc
clean_build/: CMakeCache.txt  Makefile  cmake_install.cmake
common/: README.md  binary_field_lengths.h  binary_file_format.h  dialogmanager.cpp  dialogmanager.h  dialogmanager_1.cpp  dialogmanager_DataDialog.cpp  logger.cpp  logger.h  tablestylemanager.cpp  tablestylemanager.h  tablestylemanager_1.cpp  tablestyleperformancetester.cpp  tablestyleperformancetester.h  waveformview.cpp  waveformview.h
database/: README.md  README_v2.md  README_v3.md  binaryfilehelper.cpp  binaryfilehelper.cpp.bak  binaryfilehelper.h  binaryfilehelper_1.cpp  binaryfilehelper_2.cpp  binaryfilehelper_2_1.cpp  binaryfilehelper_3.cpp  binaryfilehelper_4.cpp  binaryfileher.h  databasemanager.cpp  databasemanager.h  databasemanager_1.cpp  databasemanager_migrator.cpp  databaseviewdialog.cpp  databaseviewdialog.h  vectordao.cpp
debug/: object_script.VecEdit.Debug
migration/: datamigrator.cpp  datamigrator.h
pin/: README.md  pingroupdialog.cpp  pingroupdialog.h  pinlistdialog.cpp  pinlistdialog.h  pinselectionmanager.cpp  pinselectionmanager.h  pinsettingsdialog.cpp  pinsettingsdialog.h  pinvalueedit.cpp  pinvalueedit.h  vectorpinsettingsdialog.cpp  vectorpinsettingsdialog.h
rebuild/: CMakeCache.txt
test_fetch_row_autogen/: deps  mocs_compilation.cpp  mocs_compilation_Debug.cpp
test_vector_model_autogen/: deps  mocs_compilation.cpp  mocs_compilation_Debug.cpp
tests/: test_fetch_row.cpp  test_vector_model.cpp
timeset/: README.md  filltimesetdialog.cpp  filltimesetdialog.h  replacetimesetdialog.cpp  replacetimesetdialog.h  timesetdataaccess.cpp  timesetdialog.cpp  timesetdialog.h  timesetdialog_1.cpp  timesetedgedialog.cpp  timesetedgemanager.cpp  timesetedgemanager.h  timesetmodel.h  timesetui.cpp
tmp/: events.cpp  replacement.txt
vector/: README.md  README_优化.md  addrowdialog.cpp  addrowdialog.h  advancedvectordialog.cpp  advancedvectordialog.h  deleterangevectordialog.cpp  deleterangevectordialog.h  fillvectordialog.cpp  fillvectordialog.h  robustvectordatahandler.cpp  robustvectordatahandler.h  robustvectordatahandler_1.cpp  robustvectordatahandler_2.cpp  robustvectordatahandler_3.cpp  vector_data_types.h  vectordatahandler.cpp  vectordatahandler.h  vectordatahandler_access.cpp  vectordatahandler_access_1.cpp  vectordatahandler_cache.cpp  vectordatahandler_core.cpp  vectordatahandler_modify_rowops.cpp  vectordatahandler_modify_rowops_1.cpp  vectordatahandler_modify_rowops_2.cpp  vectordatahandler_modify_rowops_3.cpp  vectordatahandler_modify_save.cpp  vectordatahandler_modify_save_1.cpp  vectordatahandler_modify_save_2.cpp  vectordatahandler_pagedata.cpp  vectordatahandler_pagedata_model.cpp  vectordatahandler_utils.cpp  vectordatamanager.cpp  vectordatamanager.h  vectormodeltest.cpp  vectormodeltest.h  vectortabledelegate.cpp  vectortabledelegate.h  vectortablemodel.cpp  vectortablemodel.h  (+2 more)
项目文档(备份)/: 6.25.2claude.md  6.25.2cursor_qtablewidget.md  6.25cursor_qtablewidget.md  6.25确认重构计划和工作协议.md  6.30_1.md  6.30_2.md  AI_REFACTORING_PLAN_V5.md  AI辅助重构执行计划.md  REFACTORING_BINARY_STORAGE_GUIDE.md  REFACTORING_QTABLEWIDGET_TO_QTABLEVIEW.md  VecEdit波形图问题解决方案.md  Waveform_Style_Summary.md  cursor_.md  cursor_c.md  “管脚选择”对话框如图2.md  修改文本框输入逻辑.md  内存分配失败的解决方案分析.md  分析异常大的行大小错误.md  大规模数据操作秒级体验优化方案_对话记录.md  终端日志.txt  (+6 more)
(+261 files in other folders)
